<resources>
    <string name="app_name">nojom stars</string>
    <string name="calculate">Calculate</string>
    <string name="google_server_id">18405652220-6g4cctkbq66mm9kiqj7jjl4b40d4jrmm.apps.googleusercontent.com</string>
    <string name="calculate_the_price">Calculate The Price</string>
    <string name="writer_level">Writer Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="college">College</string>
    <string name="master">Master</string>
    <string name="essay_any_type">Essay ( Any type )</string>
    <string name="type_of_paper">Type of Paper</string>
    <string name="deadline">Deadline</string>
    <string name="facebook_app_id">443549146490207</string>
    <string name="fb_login_protocol_scheme">fb443549146490207</string>
    <string name="facebook_client_token">7c232603cdcd716b5445936442270475</string>
    <string name="sftext_regular">font/SanFranciscoText-Regular.otf</string>
    <string name="sftext_bold">font/SanFranciscoText-Bold.otf</string>
    <string name="sfdiaply_bold">font/SF-Pro-Display-Bold.otf</string>
    <string name="sfdiaply_regular">font/SF-Pro-Display-Regular.otf</string>
    <string name="sftext_medium">font/SanFranciscoText-Medium.otf</string>
    <string name="roboto_bold">font/roboto_bold.ttf</string>
    <string name="roboto_regular">font/roboto_regular.ttf</string>
    <string name="roboto_medium">font/roboto_medium.ttf</string>
    <string name="roboto_black">font/roboto_black.ttf</string>
    <string name="sfpro_text_regular">font/SF-Pro-Text-Regular.otf</string>
    <string name="sfpro_text_bold">font/SF-Pro-Text-Bold.otf</string>
    <string name="sfpro_text_midium">font/SF-Pro-Text-Medium.otf</string>
    <string name="sfpro_text_semibold">font/SF-Pro-Text-Semibold.otf</string>
    <string name="helvetica_light">font/HelveticaNeue Light.ttf</string>
    <string name="san_ar_thin">font/IBMPlexSansArabic-Thin.ttf</string>
    <string name="san_ar_semibold">font/IBMPlexSansArabic-SemiBold.ttf</string>
    <string name="san_ar_regular">font/IBMPlexSansArabic-Regular.ttf</string>
    <string name="san_ar_medium">font/IBMPlexSansArabic-Medium.ttf</string>
    <string name="san_ar_light">font/IBMPlexSansArabic-Light.ttf</string>
    <string name="san_ar_bold">font/IBMPlexSansArabic-Bold.ttf</string>
    <string name="sftext_semibold">font/SanFranciscoText-Semibold.otf</string>
    <string name="pages">Pages</string>
    <string name="chat_now">Chat Now</string>
    <string name="we_are_online_24_7">We are online 24/7</string>
    <string name="we_are_online_now">We are online now</string>
    <string name="chat_text">We are online 24/7. Click on \'Chat Now Here\' to chat with us now or click on the top right icon to chat with us via WhatsApp, Email, SMS…</string>
    <string name="chat_now_here">Chat Now Here</string>
    <string name="go_to_whatsapp">Go to WhatsApp</string>
    <string name="go_to_messenger">Go to Messenger</string>
    <string name="job_text">Get full time job</string>
    <string name="read_more">Read more</string>
    <string name="offer_text">Your first 10 hours will be free</string>
    <string name="offer_details">Apply for free trial</string>
    <string name="plagiarism_text">Plagiarism Free</string>
    <string name="plagiarism_details">We use Turnitin. Read more</string>
    <string name="cheapest_text">Cheapest in \nmarket</string>
    <string name="data_text">Your Data is \n100% safe</string>
    <string name="support_text">Support available \n24/7</string>
    <string name="support_details">Chat Now</string>
    <string name="total">Total</string>
    <string name="call">Call</string>
    <string name="messenger">Messenger</string>
    <string name="messanger_text">messenger.com/t/nojom</string>
    <string name="phone_number">+966 55 663 3344</string>
    <string name="phone_number_">+966556633344</string>
    <string name="phonenumber">Phone Number</string>
    <string name="phonenumber_">Phone number</string>
    <string name="phone_number_demo">512345678</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="email_">Email</string>
    <string name="email_address">Email address</string>
    <string name="email_text">support@nojom.com</string>
    <string name="sms">SMS</string>
    <string name="cancel">Cancel</string>
    <string name="my_orders">My Campaigns</string>
    <string name="login_to_orders">Login to view your campaigns</string>
    <string name="profile">Profile</string>
    <string name="login_to_profile">Login to view your profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="back">Back</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="full_name">Full name</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pw_text">Type your email to reset your password</string>
    <string name="orders">Campaigns</string>
    <string name="orders_">Orders</string>
    <string name="view_all_your_orders">View all your campaigns</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done</string>
    <string name="done_1">Done</string>
    <string name="done_2">Done</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="current">Current</string>
    <string name="unpaid">Unpaid</string>
    <string name="completed">Completed</string>
    <string name="refund">Refund</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="apply">Apply</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_balance">My Balance</string>
    <string name="policy">Policy</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_">Sign out?</string>
    <string name="chat">Chat</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="change">Change</string>
    <string name="update_password">Update Password</string>
    <string name="enter_your_old_password">Enter your current password</string>
    <string name="enter_confirm_password">Confirm your new password</string>
    <string name="doesnt_match_password">your new password doesn\'t match with confirm password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="send">Send</string>
    <string name="feedback_text">Your ideas, issue, feedback or compliments</string>
    <string name="new_order">New Campaign</string>
    <string name="question_mark">\?</string>
    <string name="type_of_service">Type of Service</string>
    <string name="writing">Writing</string>
    <string name="editing">Editing</string>
    <string name="powerpoint">PowerPoint</string>
    <string name="subject">Subject</string>
    <string name="english">English</string>
    <string name="english_">English</string>
    <string name="topic">Topic</string>
    <string name="writer_s_choice">Writer\'s choice..</string>
    <string name="details">Details</string>
    <string name="pages_topic_details">You can include paper structure and/or outline, types and number of references to be used, grading scale or any other requirements…</string>
    <string name="upload">Upload</string>
    <string name="upload_files_photo">Upload files/ photo</string>
    <string name="more_options">More options</string>
    <string name="close">Close</string>
    <string name="format_style">Format / Style</string>
    <string name="discipline">Discipline</string>
    <string name="preferred_writer">Preferred Writer</string>
    <string name="type_coupon_code">Type Coupon Code</string>
    <string name="save_order"><![CDATA[Save & Campaign]]></string>
    <string name="have_a_coupon_code">Have a coupon code?</string>
    <string name="coupon_code">Coupon Code:</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="order_number">Campaign Number</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_deadline">Campaign Deadline</string>
    <string name="discount">Discount</string>
    <string name="redeem">Redeem</string>
    <string name="return_">Return</string>
    <string name="checkout">Checkout</string>
    <string name="status">Status</string>
    <string name="agents">Stars</string>
    <string name="files">Files</string>
    <string name="payment">Payment</string>
    <string name="waiting_for_payment">Waiting for payment</string>
    <string name="not_paid">Not Paid</string>
    <string name="pay">Pay</string>
    <string name="processing">Processing</string>
    <string name="paid">Paid</string>
    <string name="order_details">Campaign Details</string>
    <string name="abstract_page">Abstract Page</string>
    <string name="turnitin_plagiarism_report">Turnitin Plagiarism Report</string>
    <string name="send_it_to_my_e_mail">Send it to my E-Mail</string>
    <string name="sorces">Sources</string>
    <string name="charts">Charts</string>
    <string name="powerpoint_slide">PowerPoint slides</string>
    <string name="my_files">My Files</string>
    <string name="_24task_pro">nojom PRO</string>
    <string name="become_a_24task_pro">Become a nojom PRO</string>
    <string name="get_full_time_job">Explore and find numerous campaigns</string>
    <string name="pro_text">Apply for a full-time or part-time work with 100% payment guarantee with nojom PRO.</string>
    <string name="how_to_apply">How to apply?</string>
    <string name="how_to_apply_text">You must first fill your profile 100%, then click Apply. We will schedule a Skype interview with you, following which we will collaborate you.</string>
    <string name="your_profile_is">Your Profile is %1$s</string>
    <string name="remind_employer_for_deposit">Please remind your client to deposit payment so you can start with the campaign.</string>
    <string name="thank_you">Thank you</string>
    <string name="enjoying_24task_agent">Enjoying nojom Star?</string>
    <string name="tap_a_start_to_rate_it_on_the_play_store">Tap a start to rate it on the Play Store.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_now">Rate now</string>
    <string name="ok">OK</string>
    <string name="your_transfer_will_complete_in_5_15_business_days">Your transfer will complete in 3–7 business days.</string>
    <string name="once_you_ve_made_a_withdraw_you_can_cancel_it_for_up_to_few_hours_to_cancel_a_pending_withdraw_click_on_the_pending_withdraw_and_click_on_cancel">Once you’ve made a withdraw, you can cancel it for up to few hours. To cancel a pending withdraw, click on the pending withdraw and click on cancel.</string>
    <string name="andrea">Khwlah</string>
    <string name="hello_this_is_andrea_from_24task_support_how_may_i_help_you_today">Hello this is Khwlah from nojom Support. How may I help you today?</string>
    <string name="okay">Okay</string>
    <string name="the_deposit_process_takes_from_5_minutes_to_2_business_days_depending_on_the_bank_from_which_the_transfer_was_made_from_">The deposit process takes from 5 minutes to 2 business days.</string>
    <string name="we_will_respond_within_24_hours">We will respond within</string>
    <string name="we_will_respond_within_24_hours_24">24 hours</string>
    <string name="no_keep_it">No, Keep it.</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="are_you_sure_to_cancel_this_campaign">Are you sure to cancel this campaign?</string>
</resources>