<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/ll_deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_rounded_corner_15"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/large_green_tick"
            android:contentDescription="@string/app_name" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/thank_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_21sdp" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:text="@string/your_transfer_will_complete_in_5_15_business_days" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:text="@string/once_you_ve_made_a_withdraw_you_can_cancel_it_for_up_to_few_hours_to_cancel_a_pending_withdraw_click_on_the_pending_withdraw_and_click_on_cancel" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_semibold"
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/blue_rounded_corner"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:text="@string/done" />
    </LinearLayout>
</layout>