<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_chat_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/profile"
            android:src="@drawable/live_chat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

            <android.textview.TextViewSFTextPro
                app:fonts="@string/sftext_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andrea"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <android.textview.TextViewSFTextPro
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_this_is_andrea_from_24task_support_how_may_i_help_you_today"
                android:textSize="@dimen/_11sdp"
                app:fonts="@string/sftext_regular" />
        </LinearLayout>

    </LinearLayout>
</layout>