<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_rounded_corner_15"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_icon" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_semibold"
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/enjoying_24task_agent"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <android.textview.TextViewSFTextPro
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/tap_a_start_to_rate_it_on_the_play_store"
            android:textSize="@dimen/_15sdp"
            app:fonts="@string/sftext_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <android.textview.TextViewSFTextPro
                app:fonts="@string/sftext_bold"
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/no_thanks"
                android:textColor="@color/red_dark"
                android:textSize="@dimen/_12sdp" />

            <android.textview.TextViewSFTextPro
                app:fonts="@string/sftext_bold"
                android:id="@+id/tv_rate_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/rate_now"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</layout>