<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="@dimen/_25sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.textview.TextViewSFTextPro
                app:fonts="@string/sftext_bold"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_apply"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/_26sdp" />

            <android.textview.TextViewSFTextPro
                app:fonts="@string/sftext_regular"
                android:id="@+id/tv_desciption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:lines="5"
                android:text="@string/how_to_apply_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_semibold"
            android:id="@+id/tv_profile_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button_bg"
            android:elevation="@dimen/_3sdp"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/_5sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/your_profile_is"
            android:textColor="@color/black"
            android:visibility="visible"
            tools:targetApi="lollipop" />
    </RelativeLayout>
</layout>