<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_rounded_corner_15"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgDone"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_pay_done" />

        <android.textview.TextViewSFTextPro
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_to_cancel_this_campaign"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:fonts="@string/sfpro_text_regular" />


        <android.button.ButtonSFTextRegular
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/blue_bg_20"
            android:backgroundTint="@color/C_FF9500"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/yes_cancel"
            android:textSize="@dimen/_13sdp"
            app:fonts="@string/sfpro_text_midium" />
        <android.button.ButtonSFTextRegular
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rounded_border_black_50"
            android:textAllCaps="false"
            android:textColor="@color/C_020814"
            android:text="@string/no_keep_it"
            android:textSize="@dimen/_13sdp"
            app:fonts="@string/sfpro_text_midium" />
    </LinearLayout>
</layout>