<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/intercom_back"
            app:tint="@color/black" />

        <android.textview.TextViewSFTextPro
            app:fonts="@string/sftext_semibold"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <android.textview.TextViewSFTextPro
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/blue_rounded_corner"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="gone"
            app:fonts="@string/sftext_bold" />
    </RelativeLayout>
</layout>